testing/tests/melt/negative/lvalues_5.c

int main() 
{
    int n = 0;
    n-- = 2; // The -- postfix operator converts an lvalue to an rvalue. 
    return 0;
}
